[tool.poetry]
name = "wgu"
version = "0.1.0"
description = ""
authors = ["James.danieliii <jamesdaniel2@seed-innovations.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
pandas = "^2.2.1"
tableau = "^0.0.3"
numpy = "^1.26.4"
seaborn = "^0.13.2"
missingno = "^0.5.2"
scikit-learn = "^1.4.1.post1"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
